Lab/src/main/bkool/parser/BKOOL.g4
grammar BKOOL;

@lexer::header {
from lexererr import *
}

options {
	language=Python3;
}
// Use ANTLR to write regular expressions describing 
// Pascal strings are made up of a sequence of characters between single quotes: 'string'. 
// The single quote itself can appear as two single quotes back to back in a string: 'isn''t'.


program: ids EOF;

// vardecls: vardecl vardecltail;

// vardecltail: vardecl vardecltail | ;

// vardecl: mptype ids ';' ;

// mptype: INTTYPE | FLOATTYPE;

ids: SEP ',' ids | SEP; 

INTTYPE: 'int';

FLOATTYPE: 'float';

ID: [a-z]+ ;
SEP: [[/]()];
